# freshbrew

./: .gitignore  Makefile  README.md  audit_results.json  auditing_sample.json  pyproject.toml  setup_env_cloud_ws.sh
.github/workflows/: ci.yaml
data/: 10k_filtered.yaml  10k_repo_features.csv  10k_repos.csv  30k.yaml  head_commits.yaml  jdk8_build_results_filtered.yaml  repo_feats.yaml
data/30k_dataset/: 30k_processed.yaml  commits.txt  cov_filtered.csv  medium_dataset.yaml  mini_dataset.yaml
data/migration_datasets/: cov_data.csv  full_dataset.yaml  medium_dataset.yaml  mini_dataset.yaml  permissive.csv  tiny_dataset.yaml
data/migration_datasets_old/: full_dataset.yaml  medium_dataset.yaml
data/new_repo_build_data/: repo_features.csv
java_migration/: dummy_agent.py  get_repos_from_github.py  job_runner.py  llm_repo_formatter.py  maven.py  randoop.py  repo_workspace.py  smol_tools.py  test_cov.py  test_cov_expander.py  utils.py
java_migration/analysis/: utils.py
java_migration/config/: smol_default.yaml  smol_default_17.yaml  smol_default_21.yaml  smol_file_tool.yaml  smol_file_tool_17.yaml  smol_file_tool_21.yaml
java_migration/eval/: agent.py  data_model.py  env_checker.py  eval.py  eval_runner.py  maven_build_verifier.py  smol_log_parser.py  utils.py  worker.py
java_migration/figure_plotting/: analyze_or_result.py  cov_thresh_analyzer.py  cov_thresh_plot.py  dataset_stats.py  figure_utils.py  get_commit_dates.py  migration_success_table.py  model_name_map.py  patch_analysis.py  plot_deps.py  plot_feature_success_grid.py  plot_target_ver_scatter.py  (+4 more)
(+51 files in other folders)
