[tool.poetry]
name = "java_migration"
version = "0.1.0"
description = "Java Migration"
authors = ["Victor May"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
tabulate = "^0.9.0"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
smolagents = "^1.9.2"
litellm = "^1.61.20"
google-api-python-client = "^2.162.0"
ruff = "^0.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"


[tool.ruff]
line-length = 120

[virtualenvs]
in-project = true
